versión Movil primera parte

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,9 @@
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: "DM Serif Display", serif;
@@ -32,7 +35,7 @@ header a:hover{
 }
 
 .titulo_secundario {
-  font-size: 2.2 em;
+  font-size: 2.5 em;
   margin-top:0;
 }
 .subtitulo {
@@ -74,13 +77,13 @@ ul {
 
 /* Estilos sección hero - main */
 
-.hero{
+#hero{
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   flex-direction: column;
-  height: 90hv;
+  height: 80vh;
   background-image: linear-gradient(
     0deg,
     rgba(0,0,0,0.5),
@@ -92,28 +95,32 @@ ul {
   background-position: center center;
 }
 
-.hero p{
+#hero p{
   color: white;
   text-align: center;
 }
 
 /* Estilos para seccion productos */
-.section_container-productos{
+#section_container-productos{
   text-align: center;
 }
 
-.container_productos{
+.container__productos{
   padding: 80px 12px;
   text-align: center;
   background-color: rgb(238, 231, 231);
 }
 
-.container_productos p{
+.container__productos p{
   display: none;
 }
 
-#container_productos .carta{
-
+.container__productos .carta{
+  background-position: center center;
+  background-size: cover;
+  padding: 40px 0px;
+  margin: 10px;
+  border-radius: 15px;
 }
 
 .carta:first-child{
@@ -122,7 +129,7 @@ ul {
     rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)
   ) 
-  ,url('https://i.postimg.cc/3NyrjKgK/hero.jpg');
+  ,url('https://i.postimg.cc/FRKqGVhk/mens-heavyweight-tee-sport-grey.jpg');
 }
 
 .carta:nth-child(2){
@@ -131,8 +138,7 @@ ul {
     rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)
   ) 
-  ,url('https://i.postimg.cc/3NyrjKgK/hero.jpg');
-
+  ,url('https://i.postimg.cc/ZnBQzYBT/white-glossy-mug-11oz-halloween.jpg');
 }
 
 .carta:nth-child(3){
@@ -141,8 +147,7 @@ ul {
     rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)
   ) 
-  ,url('https://i.postimg.cc/3NyrjKgK/hero.jpg');
-
+  ,url('https://i.postimg.cc/Pqy9mRnk/white-glossy-mug-11oz-donuts-61b.jpg');
 }
 
 
@@ -159,3 +164,25 @@ ul {
 .button-info:hover {
   background-color: rgb(101, 47, 151);
 }
+
+/* estilos para el footer */
+
+.listado li{
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items: center;
+  font-size: 2em;
+  padding: none;
+  list-style: none;
+  margin: 0;
+  
+}
+.div__footer p{
+  padding: none;
+  margin: 0;
+  text-align: center;
+  font-size: 3vw;
+}
+
+/* para la versión web */
