--- a/CSS/index.css
+++ b/CSS/index.css
@@ -218,7 +218,7 @@ ul {
 
   .container__productos .carta{
     padding:50px;
-    background-size: 100% 150px;
+    /* background-size: 100% 150px; */
   }
 
 }
