--- a/CSS/index.css
+++ b/CSS/index.css
@@ -138,7 +138,7 @@ ul {
     rgba(0,0,0,0.5),
     rgba(0,0,0,0.5)
   ) 
-  ,url('https://i.postimg.cc/ZnBQzYBT/white-glossy-mug-11oz-halloween.jpg');
+  ,url('https://i.postimg.cc/7ZYwnMFS/Publicaci-n-de-Instagram-Descuento-Black-Friday-Blanco-Moderno.png');
 }
 
 .carta:nth-child(3){
