cambio de fotos

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -130,7 +130,7 @@ ul {
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
-    url("https://i.postimg.cc/FRKqGVhk/mens-heavyweight-tee-sport-grey.jpg");
+    url("https://i.postimg.cc/05cbJvJP/4.jpg");
 }
 
 .carta:nth-child(2) {
@@ -139,7 +139,7 @@ ul {
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
-    url("https://i.postimg.cc/PqPG61mc/taza-foto.jpg");
+    url("https://i.postimg.cc/8zWpwgsF/3.jpg");
 }
 
 .carta:nth-child(3) {
@@ -148,7 +148,7 @@ ul {
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.5)
     ),
-    url("https://i.postimg.cc/Pqy9mRnk/white-glossy-mug-11oz-donuts-61b.jpg");
+    url("https://i.postimg.cc/FzRFxfJm/5.jpg");
 }
 
 .button-info {
