--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -3,6 +3,7 @@
     --primary-theme-color: #20232a;
     --secondary-theme-color: #282c34;
     --primary-text-color: #fff;
+    --fill-color: #fff;
     --secondary-tex-color: #8a2ce2;
     --primary-shadow-color: #fff8;
     --reverse-primary-shadow-color: #0008;
@@ -19,8 +20,9 @@
     --primary-border-radius: 0.5rem;
     --primary-all-transitions: all 0.25s ease-in-out;
     --primary-font-family: 'Inconsolata', monospace;
+    --color-linear-gradient: rgba(0, 0, 0, 0.5);
+
   }
-  
   @media (min-width: 854px) {
     :root {
       --padding-container: 0 0.75rem;
