--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -22,7 +22,12 @@
   }
   
   .card__footer-nav-img {
-    fill: white;
+    fill: var(--fill-color);
     width: 100%;
     height: 100%;
+  }
+
+  .card__footer h3 {
+    margin: 0;
+    padding-right: 1rem;
   }
