--- a/CSS/suscribete.css
+++ b/CSS/suscribete.css
@@ -8,7 +8,7 @@
 .content-sub{
     width: 100%;
     height: 100%;
-    background: var(--primary-shadow-color);
+    background: var(--primary-theme-color);
     display: flex;
     justify-content: center;
     align-items: center;
