--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -3,14 +3,14 @@
     --primary-theme-color: #20232a;
     --secondary-theme-color: #282c34;
     --primary-text-color: #fff;
-    --fill-color: #fff;
     --secondary-tex-color: #8a2ce2;
+    --fill-color: #fff;
     --primary-shadow-color: #fff8;
     --reverse-primary-shadow-color: #0008;
     --primary-button-color: #61dafb;
     --primary-button-color-active: #fff;
     --primary-button-text-color: #000;
-    --primary-highlight-color: #61dafb;
+    --primary-highlight-color: #0808a5;
     --secondary-highlight-color: #ffd700;
     --primary-subscribe-color:#68C3A3;
     --secondary-subscribe-color:#3eba8f;
