--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,7 +6,6 @@
 @import './footer.css';
 @import './testimonios.css';
 
-/* CSS para el body - etiquetas principales */
 * {
   box-sizing: border-box;
 }
@@ -21,32 +20,6 @@ html {
   font-family: var(--primary-font-family);
   margin: 0;
 }
-
-
-.titulo_principal {
-  font-size: 3em;
-  color: whitesmoke;
-}
-
-.titulo_principal:hover{
-  color:var(--secondary-tex-color);
-}
-
-.titulo_secundario{
-  font-size: 2.5 em;
-  margin-top: 0;
-}
-
-.subtitulo{
-  font-size: 1.25 em;
-  color: white;
-}
-
-.subtitulo:hover{
-  color: greenyellow;
-}
-
-
 
 @media (min-width: 720px) {
   header {
@@ -73,7 +46,7 @@ html {
   .container__productos p {
     display: block;
     margin-bottom: 30px;
-    color: whitesmoke;
+    color: var(--fill-color);
   }
 
   .container__productos .carta {
@@ -99,5 +72,20 @@ html {
 
   .card__body-presentation {
     font-size: 1rem;
+  }
+
+  .header-nav__menu-icon-container,
+  .header-nav__menu-close-icon-container {
+    display: none;
+  }
+
+  .header-nav__menu-list {
+    position: static;
+    flex-direction: row;
+    background-image: none;
+    gap: 1rem;
+    opacity: 1;
+    width: auto;
+    pointer-events: auto;
   }
 }
