--- a/CSS/hero.css
+++ b/CSS/hero.css
@@ -20,11 +20,10 @@
 #hero h1 {
   color: var(--primary-text-color);
   text-align: center;
-  font-size: 40px;
+  font-size: 1.5rem;
 }
 
 #hero p {
   color: var(--primary-text-color);
   text-align: center;
-  font-size: 25px;
 }
